@@ -107,7 +107,7 @@ public class Workspace implements Closeable, IGeneratorProvider {
 
 	public Collection<VariableElement> getVariableElements() {
 		// make sure that variable types are supported by generator
-		return variable_elements.stream().filter(e -> e.getType() != null).collect(Collectors.toList());
+		return variable_elements.stream().filter(e -> e.getType() != null).toList();
 	}
 
 	public Collection<SoundElement> getSoundElements() {
